tests/fixtures/invalid/pow_bool_set_none.py
# Cannot call pow() with Bool, Set[int], None
x = pow(True, {1, 2, 3}, None)
